fix(link): L3-5135 Fix Underline Spacing For Links (#491)

--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -37,7 +37,7 @@
   font-family: Distinct, sans-serif;
 }
 
-@mixin underline($offset: $spacing-xsm, $thickness: 1px, $color: $pure-black) {
+@mixin underline($offset: $spacing-micro, $thickness: 1px, $color: $pure-black) {
   text-decoration: underline;
   text-decoration-thickness: $thickness;
   text-underline-offset: $offset;
